<resources>
    <string name="app_name">CompraVenta</string>
    <string name="titulo">Título de la publicación</string>
    <string name="titulo_hint">Título...</string>
    <string name="descripcion">Descripción de la publicación <i>(Opcional)</i></string>
    <string name="descripcion_hint">Descripción...</string>
    <string name="correo">Correo electrónico de contacto</string>
    <string name="correo_hint">Correo electrónico...</string>
    <string name="precio">Precio</string>
    <string name="precio_hint">Precio del producto...</string>
    <string name="categoria">Categoría</string>
    <string name="descuento">Ofrecer descuento del envío</string>
    <string name="retiro">Retiro en persona</string>
    <string name="direccion_retiro">Dirección del retiro</string>
    <string name="direccion_retiro_hint">Dirección...</string>
    <string name="terminos">Acepto los <a href="https://www.bbc.com/mundo/noticias-44496050">términos y condiciones</a></string>
    <string name="terminos2"><a href="https://www.google.com/">Términos y condiciones</a></string>
    <string name="boton_publicar">Publicar</string>
    <string-array name="opciones_categoria">
        <item>INDUMENTARIA👚</item>
        <item>ELECTRONICA💻</item>
        <item>ENTRETENIMIENTO⚽</item>
        <item>JARDIN🌼</item>
        <item>VEHICULOS🚗</item>
        <item>JUGUETES🪀</item>

    </string-array>
</resources>